--- a/12 - Key Sequence Detection/index-START.html
+++ b/12 - Key Sequence Detection/index-START.html
@@ -7,6 +7,20 @@
     <link rel="icon" href="https://fav.farm/🔥" />
   </head>
   <body>
-    <script></script>
+    <script>
+      // variable to record the pressed key
+      let pressed = [];
+      const secretCode = "hahaha";
+      window.addEventListener("keyup",(event) => {
+        // record the pressed key
+        pressed.push(event.key);
+        // the record keeps the same length as secretCode for compare
+        pressed.splice(0,pressed.length - secretCode.length);
+        // compare with secretCode
+        if(pressed.join("").includes(secretCode)){
+          cornify_add();
+        }
+      })
+    </script>
   </body>
 </html>
